# AudioTest

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: analog_agc.c  analog_agc.h  config.h  copy_set_operations.c  cpu_features_wrapper.h  defines.h  digital_agc.c  digital_agc.h  division_operations.c  dot_product_with_scale.c  downsample_fast.c  fft4g.c  fft4g.h  gain_control.h  native-lib.cpp  noise_suppression.c  noise_suppression.h  ns_core.c  ns_core.h  real_fft.h  resample_by_2.c  signal_processing_library.h  spl_inl.h  spl_inl_armv7.h  spl_inl_mips.h  spl_sqrt.c  typedefs.h  windows_private.h
app/src/main/java/com/fengshun/audiotest/: MainActivity.java  UnitView.java
app/src/main/java/com/fengshun/audiotest/Utils/: ArrayUtils.java
app/src/main/java/com/fengshun/audiotest/normal/: AudioReceiver.java  AudioSender.java
app/src/main/java/com/fengshun/audiotest/tester/: AudioCaptureTester.java  AudioCapturer.java  AudioPlayer.java  AudioPlayerTester.java  Tester.java  WavFileHeader.java  WavFileReader.java  WavFileWriter.java
app/src/main/res/layout/: activity_main.xml  unit_view_layout.xml
gradle/wrapper/: gradle-wrapper.properties
